# snapshoot

./: Cargo.toml  README.md
config/: log4rs.yml
src/lib/: business.rs  cli.rs  lib.rs
src/lib/business/: initializer.rs  snapshot_base_folder.rs  snapshot_process.rs
src/lib/cli/: shoot.rs
tests/: integration_test.rs
tests/helpers/: mod.rs  shoot_structure_generator.rs
