[package]
name = "snapshoot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snapshoot"
path = "src/bin/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"
log4rs = "1.3.0"
tokio = { version = "1.42.0", features = ["fs", "rt", "rt-multi-thread", "macros"] }
