[package]
name = "snapshoot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snapshoot"
path = "src/bin/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
log4rs = "1.3.0"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
rand = "0.9.0"
